[package]
name = "tajacara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["local-offset"] }
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# iced.workspace = true
# iced.features = ["webgl"]
tokio = {version = "1.35.0", features = ["full"]}



[dependencies.iced]
version = "0.10.0"
features = ["canvas", "tokio", "debug"]

[dependencies.actix]
version = "0.13.1"

[dependencies.actix-web]
version = "4"
